--- a/app/views/backend/journals/show.html.haml
+++ b/app/views/backend/journals/show.html.haml
@@ -19,8 +19,8 @@
       :ruby
         conditions = eval(controller.class.journal_entries_conditions)
         totals = {}
-        totals[:debit]  = JournalEntry.sum(:real_debit, :conditions=>conditions)
-        totals[:credit] = JournalEntry.sum(:real_credit, :conditions=>conditions)
+        totals[:debit]  = JournalEntry.where(conditions).sum(:real_debit)
+        totals[:credit] = JournalEntry.where(conditions).sum(:real_credit)
         totals[:balance_debit] = totals[:balance_credit] = 0.0
         totals["balance_#{totals[:debit]>totals[:credit] ? 'debit' : 'credit'}".to_sym] = (totals[:debit]-totals[:credit]).abs
 
