--- a/app/views/backend/cells/elapsed_interventions_times_by_activities_cells/show.html.haml
+++ b/app/views/backend/cells/elapsed_interventions_times_by_activities_cells/show.html.haml
@@ -20,32 +20,32 @@
           hash[pair.expr.to_i.to_s] = pair.duration.in_second.convert(:hour).round(2).to_s.to_f
           hash
         end
-        series << {type: 'column', name: activity.name, data: normalize_serie(sums, categories.keys)}
+        series << { name: activity.name, data: normalize_serie(sums, categories.keys)}
       end
     end
 
     # data for spline sum revenus by month
-    operations_items = Operation.of_campaign(@campaign).order(:started_at)
-    if operations_items.count > 0
-        sums = operations_items.sums_of_periods.sort.inject({}) do |hash, pair|
-          hash[pair.expr.to_i.to_s] = pair.duration.in_second.convert(:hour).round(2).to_s.to_f
-          hash
-        end
-      series << {type: 'spline', name: :total.tl, data: normalize_serie(sums, categories.keys), marker: {line_width: 2}}
-    end
+    #operations_items = Operation.of_campaign(@campaign).order(:started_at)
+    #if operations_items.count > 0
+    #    sums = operations_items.sums_of_periods.sort.inject({}) do |hash, pair|
+    #      hash[pair.expr.to_i.to_s] = pair.duration.in_second.convert(:hour).round(2).to_s.to_f
+    #      hash
+    #    end
+    # series << {type: 'spline', name: :total.tl, data: normalize_serie(sums, categories.keys), marker: {line_width: 2}}
+    #end
 
     # data for elapsed time pie by activity
-    data = []
-    Activity.of_campaign(@campaign).find_each do |activity|
-      operations_items = Operation.of_activities(activity).of_campaign(@campaign).order(:started_at)
-      if operations_items.count > 0
-        sum_revenus = operations_items.sum(:duration).in_second.convert(:hour).round(2)
-        data << {name: activity.name, y: sum_revenus.to_s.to_f, url: backend_activity_path(activity)}
-      end
-    end
-    series << {type: 'pie', name: :total.tl, data: data, center: [50, 50], size: 100, show_in_legend: false, data_labels: { enabled: false }}
+    #data = []
+    #Activity.of_campaign(@campaign).find_each do |activity|
+    #  operations_items = Operation.of_activities(activity).of_campaign(@campaign).order(:started_at)
+    #  if operations_items.count > 0
+    #    sum_revenus = operations_items.sum(:duration).in_second.convert(:hour).round(2)
+    #    data << {name: activity.name, y: sum_revenus.to_s.to_f, url: backend_activity_path(activity)}
+    #  end
+    #end
+    #series << {type: 'pie', name: :total.tl, data: data, center: [50, 50], size: 100, show_in_legend: false, data_labels: { enabled: false }}
 
 
-  = column_chart(series, y_axis: {title: {text: :duration.tl}}, x_axis: { categories: categories.values}, legend: {})
+  = column_chart(series, y_axis: {title: {text: :duration.tl}, stack_labels: {enabled: true}}, x_axis: { categories: categories.values}, legend: {}, plot_options: { column: {stacking: 'normal'}})
 - else
   %strong= :no_data.tl
