--- a/app/views/backend/outgoing_deliveries/_item_fields.html.haml
+++ b/app/views/backend/outgoing_deliveries/_item_fields.html.haml
@@ -2,7 +2,7 @@
 %tr.nested-fields
   %td
     .selector
-      = f.referenced_association :product, :source => :deliverables
+      = f.referenced_association :source_product, :source => :deliverables
   %td.decimal= f.input(:quantity, :size => 7, :class => "item-pta")
   %td.action
     = link_to_remove_association(content_tag(:i) + h(:destroy.tl), f, 'data-no-turbolink' => true, :class => 'remove-item')
