--- a/app/themes/tekyla/stylesheets/active-list.css.scss
+++ b/app/themes/tekyla/stylesheets/active-list.css.scss
@@ -1,9 +1,12 @@
 @import "active-list/minimal.scss";
 @import "active-list/background.scss";
 @import "active-list/theme.scss";
-$list-line-backgrounds: ("" rgba(255, 255, 255, 0)) (".odd" rgba(255, 255, 255, 0.5)) (".even" rgba(255, 255, 255, 0.5));
-$list-column-backgrounds: ("" rgba(255, 255, 255, 0)) (".act" rgba(255, 134, 0, 0)) (".sor" rgba(0, 18, 132, 0.05));
-$list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" $hover-mask);
+
+$sort-mask: rgba(0, 18, 132, 0.05);
+
+$list-line-backgrounds:   ("&" rgba(#FFF, 0)) ("&.error, &.undone" rgba($invalid-color, 0.12)) ("&.warning, &.waiting" rgba($caution-color, 0.12)) ("&.in_progress" rgba($success-color, 0.12));
+$list-column-backgrounds: ("&" rgba(#FFF, 0)) ("&.act" rgba($link-color, 0.04)) ("&.sor" $sort-mask);
+$list-hover-backgrounds:  ("&" rgba(#FFF, 0)) ("&:hover" $hover-mask);
 
 // $default-border-color: $menu-border-color;
 // $zz-menu-width: 250px;
@@ -30,10 +33,15 @@ $list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" $hover-mask);
             @include inline-block;
             @include margin-left(round($fs-normal*0.2));
           }
-          &.sor[data-list-column-sort="desc"] .icon {
-            @include use-icon(sort-down); }
-          &.sor[data-list-column-sort="asc"] .icon {
-            @include use-icon(sort-up); }
+	  &.sor {
+            background: $sort-mask;
+            &[data-list-column-sort="desc"] .icon {
+              @include use-icon(sort-down);
+            }
+            &[data-list-column-sort="asc"] .icon {
+              @include use-icon(sort-up);
+            }
+          }
         }
         &.spe {
           overflow: visible;
@@ -115,6 +123,13 @@ $list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" $hover-mask);
           &.dec, &.flt, &.int { @include text-align(right) }
           &.country { white-space: nowrap; }
           &.color { color: white; text-shadow: 0 0 2px #000; width: 6ex; @include text-align(center) }
+        }
+        &.squeezed, &.aborted, &.refused {
+	  td {
+            &, * {
+	      text-decoration: line-through;
+            }
+          }
         }
         &.child {
           td {
