--- a/lib/assets/stylesheets/active-list/background.scss
+++ b/lib/assets/stylesheets/active-list/background.scss
@@ -11,21 +11,23 @@
   @return merge-color(merge-color(merge-color(merge-color(merge-color(merge-color(merge-color(merge-color(merge-color(merge-color($color, $color-1), $color-2), $color-3), $color-4), $color-5), $color-6), $color-7), $color-8), $color-9), $color-10);
 }
 
-$list-line-backgrounds: ("" rgba(255, 255, 255, 0)) (".odd" rgba(255, 255, 255, 0.5)) (".even" rgba(255, 255, 255, 0.5));
-$list-column-backgrounds: ("" rgba(255, 255, 255, 0)) (".act" rgba(255, 134, 0, 0)) (".sor" rgba(0, 18, 132, 0.05));
-$list-hover-backgrounds: ("" rgba(255, 255, 255, 0)) (":hover" rgba(209, 218, 255, 0.3));
+$list-line-backgrounds:   ("&" rgba(#FFF, 0)) ("&.error, &.undone" rgba(red, 0.12)) ("&.warning, &.in_progress" rgba(orange, 0.12));
+$list-column-backgrounds: ("&" rgba(#FFF, 0)) ("&.act" rgba(#F90, 0.01)) ("&.sor" rgba(#05A, 0.05));
+$list-hover-backgrounds:  ("&" rgba(#FFF, 0)) ("&:hover" rgba(blue, 0.05));
 
 @mixin list-colors($bgcolor: #000000, $selector: '&') {
   tr {
     #{$selector} {
       @each $line-background in $list-line-backgrounds {
-        &#{nth($line-background, 1)} {
+        #{nth($line-background, 1)} {
           @each $hover-background in $list-hover-backgrounds {
-            &#{nth($hover-background, 1)} {
+            #{nth($hover-background, 1)} {
               @each $col-background in $list-column-backgrounds {
-                td#{nth($col-background, 1)} {
-                  background-color: merge-colors($bgcolor, nth($line-background, 2), nth($col-background, 2), nth($hover-background, 2));
-                }
+		td {
+		  #{nth($col-background, 1)} {
+                    background-color: merge-colors($bgcolor, nth($line-background, 2), nth($col-background, 2), nth($hover-background, 2));
+		  }
+		}
               }
             }
           }
