--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -27,14 +27,14 @@
 
             if cultivable_land_parcels.count > 0
               cultivable_land_parcels_serie = cultivable_land_parcels.collect do |cultivable_land_parcel|
-                        { name: cultivable_land_parcel.name, y: cultivable_land_parcel.net_surface_area.to_s.to_f, color: cycle(*Backend::ChartsHelper::COLORS), url: backend_cultivable_land_parcel_path(cultivable_land_parcel) }
+                        { name: cultivable_land_parcel.name, y: cultivable_land_parcel.area.to_s.to_f, color: cycle(*Backend::ChartsHelper::COLORS), url: backend_cultivable_land_parcel_path(cultivable_land_parcel) }
               end
             end
 
             series = []
             series << {name: CultivableLandParcel.model_name.human, data: cultivable_land_parcels_serie, size: "80%"}
 
-          = pie_chart(series, tooltip: {point_format: '{point.y: 1.3f} Ha'}, title: {text: (@production.shape_area.round(-1).in_square_meter.convert(:hectare)).to_s}, plot_options: { pie: { allow_point_select: true, cursor: 'pointer', show_in_legend: true}}, legend: {})
+          = pie_chart(series, tooltip: {point_format: '{point.y: 1.3f} Ha'}, title: {text: (@production.area.in_hectare.round(3)).to_s}, plot_options: { pie: { allow_point_select: true, cursor: 'pointer', show_in_legend: true}}, legend: {})
         - else
           %strong= :no_data.tl
 
