--- a/app/views/backend/cells/cropping_plan_on_cultivable_land_parcels_cells/show.html.haml
+++ b/app/views/backend/cells/cropping_plan_on_cultivable_land_parcels_cells/show.html.haml
@@ -8,15 +8,15 @@
       if activities.count > 0 and productions.count > 0
 
         activities_serie = activities.collect do |activity|
-          { name: activity.name, y: activity.shape_area(@campaigns).to_s.to_f*0.0001, id: activity.id, color: cycle(*Backend::ChartsHelper::COLORS) }
+          { name: activity.name, y: activity.area(@campaigns).to_s.to_f, id: activity.id, color: cycle(*Backend::ChartsHelper::COLORS) }
         end
 
         productions_serie = productions.collect do |production|
-          { name: production.name, y: production.shape_area.to_s.to_f*0.0001, id: production.id, color: ligthen(activities_serie.detect{|a| a[:id] == production.activity_id}[:color], 0.3) }
+          { name: production.name, y: production.area.to_s.to_f, id: production.id, color: ligthen(activities_serie.detect{|a| a[:id] == production.activity_id}[:color], 0.3) }
         end
 
         cultivable_land_parcels_serie = CultivableLandParcel.of_campaign(@campaigns).of_production(productions).order("production_id, id").collect do |cultivable_land_parcel|
-          { name: cultivable_land_parcel.name, y: cultivable_land_parcel.shape_area.to_s.to_f*0.0001, color: ligthen(productions_serie.detect{|a| a[:id] == cultivable_land_parcel.supports.first.production_id}[:color], 0.3) }
+          { name: cultivable_land_parcel.name, y: cultivable_land_parcel.area.to_s.to_f, color: ligthen(productions_serie.detect{|a| a[:id] == cultivable_land_parcel.supports.first.production_id}[:color], 0.3) }
         end
       end
 
