--- a/app/views/backend/animal_medicines/index.html.haml
+++ b/app/views/backend/animal_medicines/index.html.haml
@@ -1,3 +1,7 @@
 =main_toolbar do |t|
   -t.new
-=list
+=beehive(:stock) do |b|
+  - b.cell do
+    = list
+  - b.tabbox do
+    - b.cell :currents_stocks_by_product_nature, :params => {variety: 'animal_medicine'}
