update animal view

--- a/app/views/backend/cells/last_interventions_cells/show.html.haml
+++ b/app/views/backend/cells/last_interventions_cells/show.html.haml
@@ -12,15 +12,18 @@
   .info
     %span.title= Intervention.human_attribute_name(:started_at)
     %span.value= @intervention.started_at.l
-.info
-  %span.title= Intervention.human_attribute_name(:state)
-  %span.value= @intervention.state.text
-.info
-  %span.title= :input_evaluated_cost.tl
-  %span.value= @intervention.cost(:input)
-.info
-  %span.title= :equipment_evaluated_cost.tl
-  %span.value= @intervention.cost(:equipment)
-.info
-  %span.title= :doer_evaluated_cost.tl
-  %span.value= @intervention.cost(:doer)
+  .info
+    %span.title= Intervention.human_attribute_name(:duration)
+    %span.value= @intervention.duration.in_second.convert(:hour).round(2)
+  .info
+    %span.title= Intervention.human_attribute_name(:state)
+    %span.value= @intervention.state.text
+  .info
+    %span.title= :input_evaluated_cost.tl
+    %span.value= @intervention.cost(:input)
+  .info
+    %span.title= :equipment_evaluated_cost.tl
+    %span.value= @intervention.cost(:equipment)
+  .info
+    %span.title= :doer_evaluated_cost.tl
+    %span.value= @intervention.cost(:doer)
