fix bug on Entity views and People

--- a/app/views/backend/people/_form.html.haml
+++ b/app/views/backend/people/_form.html.haml
@@ -7,7 +7,6 @@
   =f.input :prospect
   =f.input :client, :show => :client_informations
   =f.input :supplier, :show => :supplier_informations
-  =f.input :attorney, :show => :attorney_informations
   =f.input :transporter
 
 =field_set(:details) do
@@ -19,23 +18,17 @@
   =f.custom_fields
 
 =field_set(:client_informations) do
-  =f.referenced_association :sale_price_listing
   =f.input :origin, :autocomplete => true
   =f.input :first_met_on
   =f.referenced_association :proposer
   =f.referenced_association :responsible, :source => :employees
   =f.input :vat_subjected
-  =f.input :reminder_submissive, :show => :reduction_percentage
-  =f.input :reduction_percentage
   =f.input :authorized_payments_count
   =f.input :deliveries_conditions, :field => :text
-  =f.referenced_association :client_account, :source => :client_thirds, :buttons => {:new => {:number => Account.find_in_chart(:client_thirds).number}}
+  =f.referenced_association :client_account, :source => :clients, :buttons => {:new => {:number => Account.find_in_chart(:clients).number}}
 
 =field_set(:supplier_informations) do
-  =f.referenced_association :supplier_account, :source => :supplier_thirds, :buttons => {:new => {:number => Account.find_in_chart(:supplier_thirds).number}}
-
-=field_set(:attorney_informations, :after => :client_informations) do
-  =f.referenced_association :attorney_account, :source => :attorney_thirds, :buttons => {:new => {:number => Account.find_in_chart(:attorney_thirds).number}}
+  =f.referenced_association :supplier_account, :source => :suppliers, :buttons => {:new => {:number => Account.find_in_chart(:suppliers).number}}
 
 =field_set(:coordinates, :major => true) do
   =f.nested_association(:emails)
