--- a/app/views/backend/entities/show.html.haml
+++ b/app/views/backend/entities/show.html.haml
@@ -60,28 +60,28 @@
 
     - b.cell(tl(:x_observations, :count => resource.observations.count)) do
       = toolbar do |t|
-        - t.new :controller => :observations, :entity_id => resource.id
+        - t.new(:params =>{:controller => :observations, :entity_id => resource.id})
       = list(:observations)
 
   - b.tabbox do
     -# b.cell(tl(:x_subscriptions, :count => resource.subscriptions.count)) do
       = toolbar do |t|
-        - t.new(:controller => :subscriptions, :entity_id => resource.id)
+        - t.new(:params =>{:controller => :subscriptions, :entity_id => resource.id})
       = list(:subscriptions)
 
     - b.cell(tl(:x_events, :count => resource.participations.count)) do
       -#=toolbar do |t|
-        - t.new :controller => :events, :entity_id => resource.id
+        - t.new(:params =>{:controller => :events, :entity_id => resource.id})
       = list(:event_participations)
 
     - b.cell(tl(:x_entity_links, :count => EntityLink.of_entity(resource).count)) do
       = toolbar do |t|
-        - t.new :controller => :entity_links, :entity_id => resource.id
+        - t.new(:params =>{:controller => :entity_links, :entity_id => resource.id})
       = list(:links)
 
     - b.cell(tl(:x_mandates, :count => resource.mandates.count)) do
       = toolbar do |t|
-        - t.new :controller => :mandates, :entity_id => resource.id
+        - t.new(:params =>{:controller => :mandates, :entity_id => resource.id})
       = list(:mandates)
 
 
@@ -92,20 +92,20 @@
   - b.tabbox do
     - b.cell(tl(:x_sales, :count => resource.sales.count)) do
       = toolbar do |t|
-        - t.new(:controller => :sales, :client_id => resource.id)
+        - t.new(:params =>{:controller => :sales, :client_id => resource.id})
       = list(:sales)
 
     - b.cell(tl(:x_incoming_payments, :count => resource.incoming_payments.count)) do
       = toolbar do |t|
-        - t.new :controller => :incoming_payments, :payer_id => resource.id
+        - t.new(:params =>{:controller => :incoming_payments, :payer_id => resource.id})
       = list(:incoming_payments)
 
     - b.cell(tl(:x_purchases, :count => resource.purchases.count)) do
       = toolbar do |t|
-        - t.new :controller => :purchases, :supplier_id => resource.id
+        - t.new(:params =>{:controller => :purchases, :supplier_id => resource.id})
       = list(:purchases)
 
     - b.cell(tl(:x_outgoing_payments, :count => resource.outgoing_payments.count)) do
       = toolbar do |t|
-        - t.new :controller => :outgoing_payments, :payee_id => resource.id
+        - t.new(:params =>{:controller => :outgoing_payments, :payee_id => resource.id})
       = list(:outgoing_payments)
