--- a/app/views/backend/campaigns/show.html.haml
+++ b/app/views/backend/campaigns/show.html.haml
@@ -5,3 +5,13 @@
   -b.cell do
     =attributes_list(@campaign) do |l|
       -l.attribute :name
+      -l.attribute :harvest_year
+      -l.attribute :closed
+      -l.attribute :number
+      -l.attribute :description
+      
+  - b.tabbox do
+    - b.cell(:productions) do
+      = toolbar do |t|
+        - t.new(:params =>{:controller => :productions, :campaign_id => @campaign.id})
+      = list(:productions)
