--- a/app/views/backend/incidents/_form.html.haml
+++ b/app/views/backend/incidents/_form.html.haml
@@ -5,7 +5,7 @@
   =f.input :description, :as => :text
   =f.input :priority, collection: 0..4, :as => :radio_buttons
   =f.input :gravity, collection: 0..4, :as => :radio_buttons
-
+  =f.custom_fields
   =f.input :target_id, :as => :hidden
   =f.input :target_type, :as => :hidden
 
