--- a/app/views/backend/productions/_form.html.haml
+++ b/app/views/backend/productions/_form.html.haml
@@ -1,6 +1,6 @@
 =field_set do # partie info general de l entité animal
   =f.referenced_association :activity, :source => :main
-  =f.referenced_association :campaign
+  =f.referenced_association :campaign, :source => :currents
   =f.referenced_association :product_nature
   =f.input :static_support, :show => :supports
   =f.input :state
