--- a/app/views/backend/purchase_items/_form.html.haml
+++ b/app/views/backend/purchase_items/_form.html.haml
@@ -1,11 +1,10 @@
 -# TODO Form
 =field_set do
   =f.referenced_association :purchase, :field => :hidden
-  =f.referenced_association :product#, :source => :purchaseables # , :new=>true, "data-parameter-name"=>"product_id", "data-dependents"=>"#price-amount"
+  =f.referenced_association :variant#, :source => :purchaseables # , :new=>true, "data-parameter-name"=>"product_id", "data-dependents"=>"#price-amount"
   =f.input :quantity
   =f.input :annotation
-  =f.nested_association(:price)
 
-=field_set :stocks, :depend_on => :product, :if => :stockable? do
+-#=field_set :stocks, :depend_on => :product, :if => :stockable? do
   =f.referenced_association :building
   =f.input :tracking_serial, :if => :trackable?
