--- a/app/views/backend/outgoing_deliveries/show.html.haml
+++ b/app/views/backend/outgoing_deliveries/show.html.haml
@@ -1,22 +1,16 @@
-=sale_steps(@outgoing_delivery.sale)
-
 =main_toolbar do |t|
-  -t.edit @outgoing_delivery if @outgoing_delivery.updateable?
+  - t.edit @outgoing_delivery if @outgoing_delivery.updateable?
+  - t.destroy(@outgoing_delivery, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @outgoing_delivery.destroyable?
 
 =attributes_list(@outgoing_delivery) do |l|
   -l.attribute :number
   -l.attribute :reference_number
   -l.attribute :mode
   -l.attribute :weight
-  -l.attribute :pretax_amount
-  -l.attribute :amount
   -l.attribute :sale, :url => true
   -l.attribute :address
-  -l.attribute :planned_on
-  -l.attribute :moved_on
   -l.attribute :transporter, :url => true
   -l.attribute :transport, :url => true
-  -l.attribute :description
 
 %h2=OutgoingDelivery.human_attribute_name(:items)
 =list :items
