Redirects on product_natures#new if no variant for products#new

--- a/app/views/backend/product_natures/_form.html.haml
+++ b/app/views/backend/product_natures/_form.html.haml
@@ -32,5 +32,5 @@
   = f.referenced_association :asset_account, :wrapper_html => {:id => :asset_account_field_zone}
   = f.referenced_association :stock_account, :wrapper_html => {:id => :stock_account_field_zone}
 
-= field_set(:variant) do
+= field_set(:variants) do
   = f.nested_association(:variants)
