--- a/app/views/backend/taxes/_form.html.haml
+++ b/app/views/backend/taxes/_form.html.haml
@@ -1,8 +1,8 @@
-=field_set do
-  =f.input :nature
-  =f.input :amount
-  =f.input :name
-  =f.referenced_association :collected_account, :source => :collected_taxes, :new => {:number => Account.chart_number(:collected_taxes)}
-  =f.referenced_association :paid_account, :source => :paid_taxes, :new => {:number => Account.chart_number(:paid_taxes)}
-  =f.input :included
-  =f.input :reductible
+= field_set do
+  -# = f.input :nature
+  = f.input :amount
+  = f.input :name
+  = f.referenced_association :collect_account, :source => {scope: {of_usage: :collected_vat}}, :new => {:number => Account.find_or_create_in_chart(:collected_vat).number}
+  = f.referenced_association :deduction_account, :source => {scope: {of_usage: :deductible_vat}}, :new => {:number => Account.find_or_create_in_chart(:deductible_vat).number}
+  = f.input :included
+  = f.input :reductible
