--- a/app/views/backend/productions/_form.html.haml
+++ b/app/views/backend/productions/_form.html.haml
@@ -1,7 +1,7 @@
 =field_set do # partie info general de l entité animal
   =f.referenced_association :activity, :source => :main
   =f.referenced_association :campaign, :source => :currents
-  =f.referenced_association :product_nature
+  =f.referenced_association :variant
   =f.input :static_support, :show => :supports
   =f.input :state
   =f.input :started_at
