--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -5,17 +5,17 @@
   - b.cell do
     = attributes_list(@production) do |l|
       - l.attribute :name
-      - l.attribute :product_nature
+      - l.attribute :variant
       - l.attribute :started_at
       - l.attribute :state
       - l.attribute :campaign
       - l.attribute :activity
 
-  - if Nomen::Varieties[@production.product_nature.variety].self_and_parents.include?(Nomen::Varieties[:milk])
+  - if Nomen::Varieties[@production.variant.variety].self_and_parents.include?(Nomen::Varieties[:milk])
     - b.tabbox do
       - b.cell :last_milk_result, :params => {campaign_id: @production.campaign_id}
 
-  - if Nomen::Varieties[@production.product_nature.variety].self_and_parents.include?(Nomen::Varieties[:plant])
+  - if Nomen::Varieties[@production.variant.variety].self_and_parents.include?(Nomen::Varieties[:plant])
     - b.tabbox do
       - b.cell :map do
         %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => CultivableLandParcel.of_production(@production).shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
