--- a/app/views/backend/organic_matters/show.html.haml
+++ b/app/views/backend/organic_matters/show.html.haml
@@ -5,3 +5,11 @@
   -b.cell do
     =attributes_list(@organic_matter) do |l|
       -l.attribute :name
+      
+  - b.tabbox do
+    - b.cell(:interventions) do
+      = toolbar do |t|
+        - t.new(:params =>{:controller => :interventions})
+      = list(:intervention_casts)
+    - b.cell(tl(:x_indicators, :count => @organic_matter.indicator_data.count)) do
+      = list(:indicators)
