--- a/app/views/backend/entities/show.html.haml
+++ b/app/views/backend/entities/show.html.haml
@@ -26,7 +26,7 @@
         - if EntityLink.of_entity(resource).actives.any?
           .info
             %span.title= :related_people.tl
-            %span.value= Entity.related_to(resource).map{|p| link_to(p.full_name, id: p.id)}.to_sentence.html_safe
+            %span.value= Entity.related_to(resource).map{|p| link_to(p.full_name, controller: p.type.tableize, action: :show, id: p.id)}.to_sentence.html_safe
 
     - b.cell :details do
       = attributes_list(resource) do |l|
@@ -58,30 +58,30 @@
           - l.attribute :supplier_account, :url => true
         - l.attribute :transporter
 
-    - b.cell(tl(:x_observations, :count => resource.observations.count)) do
+    - b.cell(tl(:x_observations, count: resource.observations.count)) do
       = toolbar do |t|
-        - t.new(:params =>{:controller => :observations, :entity_id => resource.id})
+        - t.new(params: {controller: :observations, entity_id: resource.id})
       = list(:observations)
 
   - b.tabbox do
-    -# b.cell(tl(:x_subscriptions, :count => resource.subscriptions.count)) do
+    -# b.cell(tl(:x_subscriptions, count: resource.subscriptions.count)) do
       = toolbar do |t|
-        - t.new(:params =>{:controller => :subscriptions, :entity_id => resource.id})
+        - t.new(params: {controller: :subscriptions, entity_id: resource.id})
       = list(:subscriptions)
 
-    - b.cell(tl(:x_events, :count => resource.participations.count)) do
+    - b.cell(tl(:x_events, count: resource.participations.count)) do
       -#=toolbar do |t|
-        - t.new(:params =>{:controller => :events, :entity_id => resource.id})
+        - t.new(params: {controller: :events, entity_id: resource.id})
       = list(:event_participations)
 
-    - b.cell(tl(:x_entity_links, :count => EntityLink.of_entity(resource).count)) do
+    - b.cell(tl(:x_entity_links, count: EntityLink.of_entity(resource).count)) do
       = toolbar do |t|
-        - t.new(:params =>{:controller => :entity_links, :entity_id => resource.id})
+        - t.new(params: {controller: :entity_links, entity_id: resource.id})
       = list(:links)
 
-    - b.cell(tl(:x_mandates, :count => resource.mandates.count)) do
+    - b.cell(tl(:x_mandates, count: resource.mandates.count)) do
       = toolbar do |t|
-        - t.new(:params =>{:controller => :mandates, :entity_id => resource.id})
+        - t.new(params: {controller: :mandates, entity_id: resource.id})
       = list(:mandates)
 
 
@@ -90,22 +90,22 @@
         =  render "extra"
 
   - b.tabbox do
-    - b.cell(tl(:x_sales, :count => resource.sales.count)) do
+    - b.cell(tl(:x_sales, count: resource.sales.count)) do
       = toolbar do |t|
-        - t.new(:params =>{:controller => :sales, :client_id => resource.id})
+        - t.new(params: {controller: :sales, :client_id => resource.id})
       = list(:sales)
 
-    - b.cell(tl(:x_incoming_payments, :count => resource.incoming_payments.count)) do
+    - b.cell(tl(:x_incoming_payments, count: resource.incoming_payments.count)) do
       = toolbar do |t|
-        - t.new(:params =>{:controller => :incoming_payments, :payer_id => resource.id})
+        - t.new(params: {controller: :incoming_payments, :payer_id => resource.id})
       = list(:incoming_payments)
 
-    - b.cell(tl(:x_purchases, :count => resource.purchases.count)) do
+    - b.cell(tl(:x_purchases, count: resource.purchases.count)) do
       = toolbar do |t|
-        - t.new(:params =>{:controller => :purchases, :supplier_id => resource.id})
+        - t.new(params: {controller: :purchases, :supplier_id => resource.id})
       = list(:purchases)
 
-    - b.cell(tl(:x_outgoing_payments, :count => resource.outgoing_payments.count)) do
+    - b.cell(tl(:x_outgoing_payments, count: resource.outgoing_payments.count)) do
       = toolbar do |t|
-        - t.new(:params =>{:controller => :outgoing_payments, :payee_id => resource.id})
+        - t.new(params: {controller: :outgoing_payments, :payee_id => resource.id})
       = list(:outgoing_payments)
