--- a/app/views/backend/cash_transfers/show.html.haml
+++ b/app/views/backend/cash_transfers/show.html.haml
@@ -1,14 +1,18 @@
-=main_toolbar do |t|
-  -t.edit @cash_transfer
+= main_toolbar do |t|
+  - t.edit @cash_transfer
 
-=attributes_list(@cash_transfer) do |l|
-  -l.attribute :number
-  -l.attribute :description
-  -l.attribute :accounted_at
-  -l.attribute :emitter_cash, :url=>true
-  -l.attribute :emitter_amount
-  -l.attribute :emitter_journal_entry, :url=>true
-  -l.attribute :currency_rate
-  -l.attribute :receiver_cash, :url=>true
-  -l.attribute :receiver_amount
-  -l.attribute :receiver_journal_entry, :url=>true
+= beehive do |b|
+  - b.cell do
+    = attributes_list do |l|
+      - l.attribute :number
+      - l.attribute :transfered_on
+      - l.attribute :description
+      - l.attribute :accounted_at
+      - l.attribute :emitter_cash, url: true
+      - l.attribute :emitter_amount
+      - l.attribute :emitter_journal_entry, url: true
+      - l.attribute :currency_rate
+      - l.attribute :receiver_cash, url: true
+      - l.attribute :receiver_amount
+      - l.attribute :receiver_journal_entry, url: true
+    
