Fixes all remaining in CashTransfer and prevents from undated bookkeeping

--- a/app/views/backend/cash_transfers/_form.html.haml
+++ b/app/views/backend/cash_transfers/_form.html.haml
@@ -1,7 +1,8 @@
 = f.object.errors.inspect if f.object.errors
 = field_set do
   = f.input :transfered_on
-  = f.referenced_association :emitter_cash
-  = f.input :emitter_amount
-  = f.referenced_association :receiver_cash
-  = f.input :description, :field => :text
+  = f.referenced_association :emission_cash
+  = f.input :emission_amount
+  = f.input :currency_rate
+  = f.referenced_association :reception_cash
+  = f.input :description, field: :text
